2003-05-21  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkText.c (TextSearchCmd): Forwards and backwards aren't
	the same.  [Bug 740558]  Also edited SearchCore to get it closer
	to the Engineering Manual style guidelines.

2003-05-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/textImage.test:		Fixed faults in option parsing and
	* tests/text.test:		made tests conformant. [Bug 739965]
	* generic/tkText.c (TextSearchCmd): 

	* library/demos/en.msg: Base catalog for the widget demo.
	* library/demos/widget: Added message-catalog support.
	* library/console.tcl: Reworked to use tk::AmpMenuArgs and be more
	"in style".
	* library/tk.tcl (tk::AmpMenuArgs): New procedure for doing
	tk::AmpWidget-like processing for menus.

	* generic/tkTextMark.c:		Removed complaints about signed vs.
	* generic/tkTextImage.c:	unsigned in arguments to strncmp() by
	* generic/tkText.c:		using Tcl_GetIndexFromObj() more.

2003-05-19  Vince Darley <vincentdarley@users.sourceforge.net>

	* doc/text.n
	* generic/tkCanvas.c
	* generic/tkInt.h
	* generic/tkTest.c
	* generic/tkText.c
	* generic/tkText.h
	* generic/tkTextBTree.c
	* generic/tkTextDisp.c
	* generic/tkTextImage.c
	* generic/tkTextIndex.c
	* generic/tkTextMark.c
	* generic/tkTextTag.c
	* generic/tkTextWind.c
	* generic/tkUndo.c
	* generic/tkUndo.h
	* generic/tkWindow.c
	* library/text.tcl
	* tests/text.test
	* tests/textIndex.test
	* tests/textMark.test
	* tests/textTag.test
	* tests/textWind.test: implementation of TIP 113.  This adds
	multi-line searching and '-all' searching to the text widget.
	In addition the changes contain a complete 'objectification' of
	the text widget.  Includes documentation and new tests.
	
2003-05-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: changed tkConfig.sh location
	in versioned framework subdirectories to be identical to location
	in framework toplevel; fixed stub library symbolic links to be
	tk version specific.
